# ucd-generate

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
benches/tables/fst/: general_category.fst  general_category.rs  jamo_short_name.fst  jamo_short_name.rs  names.fst  names.rs
benches/tables/slice/: general_categories.rs  general_categories_split.rs  general_category.rs  general_category_separate.rs  general_category_split_separate.rs  jamo_short_name.rs  mod.rs  names.rs
benches/tables/trie/: general_categories.rs
ci/: script.sh
scripts/: generate-unicode-tables
src/: age.rs  app.rs  args.rs  bidi_class.rs  bidi_mirroring_glyph.rs  brk.rs  canonical_combining_class.rs  case_folding.rs  case_mapping.rs  dfa.rs  error.rs  general_category.rs  grapheme_cluster_break.rs  jamo_short_name.rs  joining_group.rs  joining_type.rs  lib.rs  main.rs  names.rs  property_bool.rs  regex.rs  run.rs  script.rs  util.rs  writer.rs
src/common/: app.rs  args.rs  bidi_mirroring_glyph.rs  brk.rs  case_folding.rs  case_mapping.rs  error.rs  general_category.rs  mod.rs  script.rs  util.rs  writer.rs
ucd-parse/: Cargo.toml  README.md
ucd-parse/src/: age.rs  arabic_shaping.rs  bidi_mirroring_glyph.rs  case_folding.rs  common.rs  core_properties.rs  derived_normalization_properties.rs  east_asian_width.rs  emoji_properties.rs  error.rs  grapheme_cluster_break.rs  jamo_short_name.rs  lib.rs  line_break.rs  name_aliases.rs  prop_list.rs  property_aliases.rs  property_value_aliases.rs  script_extensions.rs  scripts.rs  sentence_break.rs  special_casing.rs  unicode_data.rs  word_break.rs
ucd-parse/src/extracted/: derived_bidi_class.rs  derived_binary_properties.rs  derived_combining_class.rs  derived_decomposition_type.rs  derived_east_asian_width.rs  derived_general_category.rs  derived_joining_group.rs  derived_joining_type.rs  derived_line_break.rs  derived_name.rs  derived_numeric_type.rs  derived_numeric_values.rs  mod.rs
ucd-trie/: Cargo.toml  README.md
ucd-trie/src/: general_category.rs  lib.rs  owned.rs
ucd-util/: Cargo.toml  README.md
ucd-util/src/: hangul.rs  ideograph.rs  lib.rs  name.rs  property.rs
ucd-util/src/unicode_tables/: jamo_short_name.rs  mod.rs  property_names.rs  property_values.rs
