[package]
name = "ucd-generate"
version = "0.2.8"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A program for generating packed representations of the Unicode character
database that can be efficiently searched.
"""
documentation = "https://github.com/BurntSushi/ucd-generate"
homepage = "https://github.com/BurntSushi/ucd-generate"
repository = "https://github.com/BurntSushi/ucd-generate"
readme = "README.md"
keywords = ["unicode", "generate", "character", "table", "fst"]
license = "MIT/Apache-2.0"
categories = ["text-processing", "internationalization"]
edition = "2018"

[workspace]
members = ["ucd-parse", "ucd-trie", "ucd-util"]

[[bin]]
bench = false
path = "src/main.rs"
name = "ucd-generate"

[dependencies]
byteorder = "1"
fst = "0.4.0"
regex-automata = "0.1.9"
ucd-parse = { version = "0.1.8", path = "ucd-parse" }
ucd-trie = { version = "0.1.3", path = "ucd-trie" }
ucd-util = { version = "0.1.8", path = "ucd-util"  }

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions", "color"]

[dev-dependencies]
lazy_static = "1"

[profile.release]
debug = true
