[package]
name = "ucd-generate"
version = "0.3.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A program for generating packed representations of the Unicode character
database that can be efficiently searched.
"""
documentation = "https://github.com/BurntSushi/ucd-generate"
homepage = "https://github.com/BurntSushi/ucd-generate"
repository = "https://github.com/BurntSushi/ucd-generate"
readme = "README.md"
keywords = ["unicode", "generate", "character", "table", "fst"]
license = "MIT OR Apache-2.0"
categories = ["text-processing", "internationalization"]
edition = "2021"
rust-version = "1.70"

[workspace]
members = ["ucd-parse", "ucd-trie", "ucd-util"]

[[bin]]
bench = false
path = "src/main.rs"
name = "ucd-generate"

[dependencies]
fst = "0.4.0"
ucd-parse = { version = "0.1.10", path = "ucd-parse" }
ucd-trie = { version = "0.1.7", path = "ucd-trie" }
ucd-util = { version = "0.2.2", path = "ucd-util"  }

[dependencies.clap]
version = "2.34.0"
default-features = false
features = ["suggestions"]

[dev-dependencies]
once_cell = "1"

[profile.release]
debug = true
