[package]
name = "ucd-parse"
version = "0.1.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A library for parsing data files in the Unicode character database.
"""
documentation = "https://github.com/BurntSushi/rucd"
homepage = "https://github.com/BurntSushi/rucd"
repository = "https://github.com/BurntSushi/rucd"
readme = "README.md"
keywords = ["unicode", "database", "character", "property"]
license = "MIT/Apache-2.0"

[dependencies]
lazy_static = "1"
regex = "0.2"
