[package]
name = "ucd-parse"
version = "0.1.7"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A library for parsing data files in the Unicode character database.
"""
documentation = "https://docs.rs/ucd-parse"
homepage = "https://github.com/BurntSushi/ucd-generate"
repository = "https://github.com/BurntSushi/ucd-generate"
readme = "README.md"
keywords = ["unicode", "database", "character", "property"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
lazy_static = "1"

[dependencies.regex]
version = "1"
default-features = false
features = ["std", "unicode"]
