[package]
name = "ucd-trie"
version = "0.0.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A trie for storing Unicode codepoint sets and maps.
"""
documentation = "https://docs.rs/ucd-trie"
homepage = "https://github.com/BurntSushi/rucd"
repository = "https://github.com/BurntSushi/rucd"
readme = "README.md"
keywords = ["unicode", "database", "character", "codepoint", "trie"]
license = "Unlicense/MIT"

[dev-dependencies]
lazy_static = "1"

[features]
default = ["std"]
std = []
