[package]
name = "ucd-util"
version = "0.1.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A small utility library for working with the Unicode character database.
"""
documentation = "https://github.com/BurntSushi/rucd"
homepage = "https://github.com/BurntSushi/rucd"
repository = "https://github.com/BurntSushi/rucd"
readme = "README.md"
keywords = ["unicode", "database", "character", "property"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
# Disable this on-by-default feature and add "alloc" to allow use in no_std builds
std = []
# Required for use in no_std builds, presently nightly-only
alloc = []