[package]
name = "ucd-util"
version = "0.2.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A small utility library for working with the Unicode character database.
"""
documentation = "https://docs.rs/ucd-util"
homepage = "https://github.com/BurntSushi/ucd-generate"
repository = "https://github.com/BurntSushi/ucd-generate"
readme = "README.md"
keywords = ["unicode", "database", "character", "property"]
license = "MIT OR Apache-2.0"
edition = "2018"
